# venturalitica-scenario-medical

./: .gitignore  README.md  download_data.py  main.py  pyproject.toml
base_medical/: model_evaluation.py  pyproject.toml  regenerate_metadata.py
shared_data/: annex_iv1.yaml  cohort_results.csv  trusted_metadata.csv
shared_data/policies/: data_policy.oscal.yaml  model_policy.oscal.yaml
venturalitica_medical/: compliance_suite.py  pyproject.toml
