[project]
name = "base-medical"
version = "0.5.0"
description = "Spine segmentation inference pipeline - pure ML without governance"
requires-python = ">=3.11"
dependencies = [
    "monai[all]>=1.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.21.0",
]
